kitchen-tests/azure_nsg_post_deploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "allowed_source_ip": {
      "type": "string",
      "metadata": {
        "description": "Public IP address (or CIDR) allowed to reach WinRM/RDP on the test VM."
      }
    }
  },
  "variables": {
    "nsgName": "kitchen-nsg",
    "vnetName": "vnet",
    "subnetName": "Subnet",
    "subnetAddressPrefix": "10.0.0.0/24"
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2022-05-01",
      "name": "[variables('nsgName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow-WinRM-HTTP",
            "properties": {
              "priority": 1000,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "5985",
              "sourceAddressPrefix": "[parameters('allowed_source_ip')]",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "Allow-WinRM-HTTPS",
            "properties": {
              "priority": 1010,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "5986",
              "sourceAddressPrefix": "[parameters('allowed_source_ip')]",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "Allow-RDP",
            "properties": {
              "priority": 1020,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "[parameters('allowed_source_ip')]",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2022-05-01",
      "name": "[concat(variables('vnetName'), '/', variables('subnetName'))]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
      ],
      "properties": {
        "addressPrefix": "[variables('subnetAddressPrefix')]",
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
        }
      }
    }
  ]
}
